fixing horizontal spacing

--- a/main.css
+++ b/main.css
@@ -37,7 +37,7 @@ h1 {
     width: 100%;
     display: flex;
     justify-content: center;
-    gap: 10%
+    gap: 5%
 }
 
 #flowers {
